--- a/src/app/pages/movie-details/movie-details.page.html
+++ b/src/app/pages/movie-details/movie-details.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
@@ -20,6 +20,7 @@
     </ion-card-header>
     <ion-card-content text-center>
       <img [src]="information.Poster" class="info-img">
+      <br>
       {{ information.Plot }}
  
       <ion-item lines="none">
