--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>My Movie Search</ion-title>
+  <ion-toolbar color="dark">
+    <ion-title>Movie Search</ion-title>
   </ion-toolbar>
 </ion-header>
  
