https Issue fixed

--- a/src/app/pages/movie-details/movie-details.page.html
+++ b/src/app/pages/movie-details/movie-details.page.html
@@ -19,7 +19,9 @@
       </ion-card-subtitle>
     </ion-card-header>
     <ion-card-content text-center>
-      <img [src]="information.Poster" class="info-img">
+      <ion-card>
+        <img [src]="information.Poster" class="">
+      </ion-card>
       <br>
       {{ information.Plot }}
  
