--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -6,7 +6,7 @@
  
 <ion-content>
  
-  <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="onSearch($event)"></ion-searchbar>
+  <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="onSearch($event)" animated></ion-searchbar>
  
   <ion-item>
     <ion-label>Select Searchtype</ion-label>
@@ -21,6 +21,9 @@
 
   <ion-list>
  
+  <ion-text color="danger">
+    <h3>{{ errorOccur }}</h3>
+  </ion-text>
     <ion-item button *ngFor="let item of (results | async)" [routerLink]="['/', 'movie', item.imdbID]">
      
       <ion-avatar slot="start">
@@ -28,7 +31,7 @@
       </ion-avatar>
  
       <ion-label text-wrap>
-        <h3>{{ item.Title }}</h3>
+          <h2>{{ item.Title }}</h2>     
         {{ item.Year }}
       </ion-label>
  
