--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-toolbar color="dark">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>Movie Search</ion-title>
   </ion-toolbar>
 </ion-header>
- 
 <ion-content>
- 
   <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="onSearch($event)" animated></ion-searchbar>
- 
   <ion-item>
     <ion-label>Select Searchtype</ion-label>
     <ion-select [(ngModel)]="type" (ionChange)="onSearch($event)">
@@ -17,30 +17,27 @@
       <ion-select-option value="episode">Episode</ion-select-option>
     </ion-select>
   </ion-item>
-  
-
   <ion-list>
- 
-  <ion-text color="danger">
-    <h3>{{ errorOccur }}</h3>
-  </ion-text>
+    <ion-text color="danger">
+      <h3>{{ errorOccur }}</h3>
+    </ion-text>
     <ion-item button *ngFor="let item of (results | async)" [routerLink]="['/', 'movie', item.imdbID]">
-     
+
       <ion-avatar slot="start">
         <img [src]="item.Poster" *ngIf="item.Poster != 'N/A'">
       </ion-avatar>
- 
+
       <ion-label text-wrap>
-          <h2>{{ item.Title }}</h2>     
+        <h2>{{ item.Title }}</h2>
         {{ item.Year }}
       </ion-label>
- 
+
       <ion-icon slot="end" *ngIf="item.Type == 'movie'" name="videocam"></ion-icon>
       <ion-icon slot="end" *ngIf="item.Type == 'series'" name="tv"></ion-icon>
       <ion-icon slot="end" *ngIf="item.Type == 'game'" name="logo-game-controller-b"></ion-icon>
- 
+
     </ion-item>
- 
+
   </ion-list>
- 
+
 </ion-content>
