--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,10 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.loader-css-class {
+    --background:#b82b00;
+    --spinner-color:#ffffff;
+
+ }
