Login Credentials stored in Storage, custom components implemented.

--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -38,7 +38,7 @@
         <ion-row>
           <ion-col>
             <ion-button [disabled]="!loginForm.valid" shape="rounded" type="submit" color="danger" expand="block"
-              [routerLink]="['/movies']">Sign In</ion-button>
+          >Sign In</ion-button>
           </ion-col>
         </ion-row>
         <ion-grid>
