--- a/src/app/pages/movie-details/movie-details.page.html
+++ b/src/app/pages/movie-details/movie-details.page.html
@@ -6,45 +6,8 @@
     <ion-title>{{ information?.Genre }}</ion-title>
   </ion-toolbar>
 </ion-header>
- 
+
 <ion-content padding>
- 
-  <ion-card *ngIf="information">
-    <ion-card-header>
-      <ion-card-title>
-        {{ information.Title }}
-      </ion-card-title>
-      <ion-card-subtitle>
-        {{ information.Year }}
-      </ion-card-subtitle>
-    </ion-card-header>
-    <ion-card-content text-center>
-      <ion-card>
-        <img [src]="information.Poster" class="">
-      </ion-card>
-      <br>
-      {{ information.Plot }}
- 
-      <ion-item lines="none">
-        <ion-icon name="star-half" slot="start"></ion-icon>
-        <ion-label>{{ information.imdbRating }}</ion-label>
-      </ion-item>
- 
-      <ion-item lines="none">
-        <ion-icon name="clipboard" slot="start"></ion-icon>
-        <ion-label text-wrap>{{ information.Director }}</ion-label>
-      </ion-item>
- 
-      <ion-item lines="none">
-        <ion-icon name="contacts" slot="start"></ion-icon>
-        <ion-label text-wrap>{{ information.Actors }}</ion-label>
-      </ion-item>
- 
-      <ion-button expand="full" (click)="openWebsite()" *ngIf="information.Website && information.Website != 'N/A'">
-        <ion-icon name="open" slot="start"></ion-icon>
-        Open Website
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
-  
+  <!-- custom component -->
+  <app-movie-details-card [movieInfo]="information"></app-movie-details-card>
 </ion-content>
